--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -35,9 +35,9 @@
             android:id="@+id/frameLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/edittext_background"
             android:elevation="20dp"
             android:layoutDirection="locale"
@@ -48,9 +48,9 @@
                 android:layout_height="48dp"
                 android:id="@+id/toolBarLayout"
 
-                android:background="@color/white"
+                android:background="@drawable/edittext_background"
                 android:orientation="horizontal"
-                android:weightSum="1.75">
+                android:weightSum="1.65">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -60,16 +60,18 @@
 
                     <ImageView
                         android:id="@+id/imgBack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
                         android:layout_gravity="start|center_vertical"
-                        android:layout_marginStart="4dp"
                         app:srcCompat="@drawable/ic_arrow" />
 
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
 
                         <dm.sime.com.kharetati.view.customview.CleanableEditText
                             android:id="@+id/txtPlotNo"
@@ -89,15 +91,15 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight=".75"
+                    android:layout_weight=".65"
 
                     android:orientation="horizontal"
                     android:weightSum="6">
 
                     <ImageView
                         android:id="@+id/imgSearch"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
@@ -105,11 +107,11 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
                     <ImageView
                         android:id="@+id/imgLayer"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
 
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
@@ -118,11 +120,11 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
                     <ImageView
                         android:id="@+id/imgBookmark"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
 
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
@@ -131,11 +133,11 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
                     <ImageView
                         android:id="@+id/imgRecenter"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
@@ -143,11 +145,11 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
                     <ImageView
                         android:id="@+id/imgMakani"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
                         android:layout_weight="1"
@@ -155,11 +157,11 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/gray"/>
+                        android:background="@color/gray_text_color"/>
                     <ImageView
                         android:id="@+id/imgHelp"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
 
                         android:layout_margin="8dp"
                         android:layout_gravity="start|center_vertical"
