--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
 
     <!-- dots active colors -->
-    <color name="maroon_light">#a31533</color>
+    <color name="maroon_light">#b71e3e</color>
     <color name="maroon_light_transparent">#bf556b</color>
     <color name="maroon_dark">#940e2a</color>
     <color name="yellow_light">#cce3e330</color>
